build/traefik-conf/traefik-linkerd-ingress.yaml
  apiVersion: traefik.containo.us/v1alpha1
  kind: Middleware
  metadata:
    name: l5d-header-middleware
    namespace: traefik
  spec:
    headers:
      customRequestHeaders:
        l5d-dst-override: "my-service.traefik.svc.cluster.local:80"  # my-service is a placeholder, ensure the service name is correctly specified
